Refactor and add package file

--- a/example.config.json
+++ b/example.config.json
@@ -3,8 +3,8 @@
     "on": true
   },
   "content": {
-    "with": false,
-    "without": true,
+    "with": true,
+    "without": false,
     "validate": {}
   }
 }
